--- a/sponser.html
+++ b/sponser.html
@@ -63,7 +63,7 @@
             <div class="row align-items-center">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
-                  <a href="index.html"><img src="images/logo.PNG" /></a>
+                  <a href="index.html"><img src="Logos/White linear.png" style="width:290px; height:85px;"></a>
                 </h2>
               </div>
               <div class="col-10">
@@ -176,8 +176,8 @@
       <!-- <div class="sp-why">
    		<h2>Sponsor Category</h2>
    </div>
-   
-   
+
+
 	<div class="container">
 		<ul id="categories" class="clr">
 	  <li class="pusher"></li>
