--- a/speaker.html
+++ b/speaker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TEDxIITPatna | Speaker</title>
+    <title>TEDxIITPatnaLive | Speaker</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="fonts/icomoon/style.css" />
@@ -100,7 +100,7 @@
             <div class="row align-items-center">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
-                  <a href="index.html"><img src="images/logo.PNG"/></a>
+                  <a href="index.html"><img src="Logos/White linear.png" style="width:290px; height:85px;"></a>
                 </h2>
               </div>
               <div class="col-10">
