--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TEDxIITPatna | Gallery</title>
+    <title>TEDxIITPatnaLive | Gallery</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -166,87 +166,87 @@
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g10.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3698.JPG">
                 <img src="gallery-new/_DSC3698.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g11.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3701.JPG">
                 <img src="gallery-new/_DSC3701.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g12.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3703.JPG">
                 <img src="gallery-new/_DSC3703.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g13.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3715.JPG">
                 <img src="gallery-new/_DSC3715.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g14.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3722.JPG">
                 <img src="gallery-new/_DSC3722.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g15.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3733.JPG">
                 <img src="gallery-new/_DSC3733.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g16.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3735.JPG">
                 <img src="gallery-new/_DSC3735.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g17.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3747.JPG">
                 <img src="gallery-new/_DSC3747.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g18.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3759.JPG">
                 <img src="gallery-new/_DSC3759.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g19.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3763.JPG">
                 <img src="gallery-new/_DSC3763.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g20.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3784.JPG">
                 <img src="gallery-new/_DSC3784.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g21.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3789.JPG">
                 <img src="gallery-new/_DSC3789.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g22.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3791.JPG">
                 <img src="gallery-new/_DSC3791.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g23.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3811.JPG">
                 <img src="gallery-new/_DSC3811.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g24.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3814.JPG">
                 <img src="gallery-new/_DSC3814.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g25.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3849.JPG">
                 <img src="gallery-new/_DSC3849.JPG" alt="Tunnel" />
               </a>
             </div>
             <div class="col-sm-6 col-md-4">
-              <a class="lightbox" href="images/gallery/g26.JPG">
+              <a class="lightbox" href="gallery-new/_DSC3852.JPG">
                 <img src="gallery-new/_DSC3852.JPG" alt="Tunnel" />
               </a>
             </div>
