--- a/team.html
+++ b/team.html
@@ -66,7 +66,7 @@
 
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li><a href="index.html">Home</a></li>
-                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
+                      <!-- <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li> -->
                       <!--  <li class="has-children">
                         <a href="#">About</a>
                        <ul class="dropdown arrow-top">
@@ -84,7 +84,7 @@
                         <!--  <li><a href="#sch">Schedule</a></li>
 
                       <li><a href="#spk">Speakers</a></li>-->
-                      <li><a href="#foo">Contact</a></li>
+                      <!-- <li><a href="#foo">Contact</a></li> -->
                     </ul>
                   </div>
                 </nav>
