--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li class="active"><a href="index.html">Home</a></li>
 
-                      <!-- <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li> -->
+                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                       <!--  <li class="has-children">
                         <a href="#">About</a>
                        <ul class="dropdown arrow-top">
@@ -113,7 +113,7 @@
                         <!--  <li><a href="#sch">Schedule</a></li>
 
                       <li><a href="#spk">Speakers</a></li>-->
-                      <!-- <li><a href="#foo">Contact</a></li> -->
+                      <li><a href="#foo">Contact</a></li>
                     </ul>
                   </div>
                 </nav>
