--- a/speaker.html
+++ b/speaker.html
@@ -117,7 +117,7 @@
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li><a href="index.html">Home</a></li>
                       <!-- <li class="has-children"> -->
-                      <!-- <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li> -->
+                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                       <li><a href="gallery.html">Gallery</a></li>
                       <li class="has-children active">
                         <a href="#">Join US</a>
@@ -128,7 +128,7 @@
                       </li>
                       <!-- <li><a href="index.html#sch">Schedule</a></li>
 										<li><a href="index.html#spk">Speakers</a></li> -->
-                      <!-- <li><a href="#">Contact</a></li> -->
+                      <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
                 </nav>
