--- a/spk.html
+++ b/spk.html
@@ -92,7 +92,7 @@
                       </div>
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
-                      <!-- <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li> -->
+                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                         <li>
                           <a href="gallery.html">Gallery</a>
                         </li>
@@ -104,7 +104,7 @@
                         <li><a href="sponsor.html">Sponsors</a></li>
                         <!-- <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
-                        <!-- <li><a href="#foo">Contact</a></li> -->
+                        <li><a href="#foo">Contact</a></li>
                       </ul>
                     </div>
                   </nav>
