--- a/sponser.html
+++ b/sponser.html
@@ -77,7 +77,7 @@
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li><a href="index.html">Home</a></li>
                       <!-- <li class="has-children"> -->
-                      <!-- <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li> -->
+                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                       <li><a href="gallery.html">Gallery</a></li>
                       <li>
                           <a href="videos.html">Videos</a>
@@ -86,7 +86,7 @@
                       <li ><a href="spk.html">Speakers</a></li>
                       <!-- <li><a href="index.html#sch">Schedule</a></li>
 						<li><a href="index.html#spk">Speakers</a></li> -->
-                      <!-- <li><a href="#">Contact</a></li> -->
+                      <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
                 </nav>
