--- a/sponsor.html
+++ b/sponsor.html
@@ -77,7 +77,7 @@
                       </div>
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
-                      <!-- <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li> -->
+                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                         <li>
                           <a href="gallery.html">Gallery</a>
                         </li>
@@ -90,7 +90,7 @@
                         <!-- <li><a</li> -->
                         <!-- <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
-                        <!-- <li><a href="#foo">Contact</a></li> -->
+                        <li><a href="#foo">Contact</a></li>
                       </ul>
                     </div>
                   </nav>
@@ -111,7 +111,7 @@
         <br />          
         <div class="container">
           <div class="heading-with-border text-center mb-5">
-            <h2 class="heading text-uppercase" style="font-size: 30px;"><strong>our previous Sponsors</strong></h2>
+            <h2 class="heading text-uppercase" style="font-size: 30px;"><strong>Sponsors</strong></h2>
           </div>
           <div class="row">
             <div class="col-md-6 col-lg-4 mb-5">
