Made several changes to teams page, speakers, footer and other ui improvements

--- a/footer.html
+++ b/footer.html
@@ -10,13 +10,13 @@
     body {
       margin: 0;
       padding: 10px 0 0 0;
-      background: #1f1f1f;
+      background: white;
     }
 
     .footer .one i {
       font-size: 2em;
       margin: 15px;
-      color: #fff;
+      color: black;
       transition: 0.5s;
     }
 
@@ -34,13 +34,13 @@
     }
 
     .footer .two {
-      color: #fff;
+      color: black;
     }
 
     .footer .two a {
       margin: 4px 20px 10px 0;
       font-size: 1.2em;
-      color: #fff;
+      color: black;
     }
 
     .footer .one i:hover {
@@ -61,7 +61,7 @@
       .footer .one i {
         font-size: 1em;
         margin: 15px !important;
-        color: #fff;
+        color: black;
         transition: 0.5s;
 
       }
@@ -81,7 +81,7 @@
       .footer .two a {
         margin-right: 20px;
         font-size: 1.2em;
-        color: #fff;
+        color: black;
       }
       .footer .one i:hover {
         transform: rotateY(360deg);
@@ -164,7 +164,7 @@
     </div>
     <div class="container">
       <hr />
-      <h5 class="text-center cprgt" style="color: #fff;font-weight: normal;">
+      <h5 class="text-center cprgt" style="color: black;font-weight: normal;">
        <div style="letter-spacing: 0.5px">This Independent TEDx Event Is Operated Under License From TED | Copyright &copy; 2019 All Rights Reserved</div> 
         
       </h5>
