--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     </div>
     <!-- .site-mobile-menu -->
 
-    <div class="site-navbar-wrap bg-white" id="sticky">
-      <div class="container">
+    <div class="site-navbar-wrap bg-light" id="sticky">
+      <div class="container ">
         <div class="site-navbar bg-light">
           <div class="py-1">
-            <div class="row align-items-center">
+            <div class="row align-items-center ">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
                   <a href="index.html"><img src="images/logo.PNG" /></a>
