--- a/gallery.html
+++ b/gallery.html
@@ -36,6 +36,53 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/gallery.css" />
+
+    <style>
+    .dropbtn {
+      background-color: none;
+      opacity: 100%;
+      color: White;
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      min-width: 160px;
+      width: 100%;
+    }
+
+    .dropdown-content a {
+      color: black;
+      padding: 16px 16px;
+      text-decoration: none;
+      display: block;
+      width: 100%;
+    }
+
+    .dropdown-content a:hover {background-color: #ddd;}
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin-right: 0;
+      padding-right: 0;
+    }
+
+    .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+    </style>
   </head>
   <body style="background: #F1EEEE;">
     <div class="site-wrap">
@@ -74,12 +121,14 @@
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
                       <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
-                        <li class="active">
-                          <a href="gallery.html">Gallery</a>
-                        </li>
-                        <li>
-                          <a href="videos.html">Videos</a>
-                        </li>
+                      <div class="dropdown" id="Gallery">
+                      <li style="list-style: none;">
+                        <a href="#" style="padding: 10px;">GALLERY</a></li>
+                        <div class="dropdown-content">
+                        <a href="gallery.html">Photos</a>
+                        <a href="videos.html">Videos</a>
+                          </div>
+                        </div>
                         <li><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
                         <li><a href="sponsor.html">Sponsors</a></li>
@@ -118,6 +167,8 @@
           <div class="heading-with-border text-center mb-5">
             <h2 class="heading text-uppercase">Gallery</h2>
           </div>
+
+
 
           <div class="row">
             <div class="col-sm-6 col-md-4">
@@ -248,6 +299,11 @@
             <div class="col-sm-6 col-md-4">
               <a class="lightbox" href="gallery-new/_DSC3852.JPG">
                 <img src="gallery-new/_DSC3852.JPG" alt="Tunnel" />
+              </a>
+            </div>
+            <div class="col-sm-6 col-md-4">
+              <a class="lightbox" href="gallery-new/_DSC3817.JPG">
+                <img src="gallery-new/_DSC3817.JPG" alt="Tunnel" />
               </a>
             </div>
           </div>
