--- a/spk.html
+++ b/spk.html
@@ -11,7 +11,7 @@
   <meta property="og:image" content="https://www.tedxiitpatna.com/images/theme.jpg">
   <meta property="og:url" content="https://www.tedxiitpatna.com/videos.html">
     <link
-      href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700"
+          href="https://fonts.googleapis.com/css?family=Droid+Sans:400,700"
       rel="stylesheet"
     />
     <link
@@ -54,6 +54,52 @@
       .description {
         font-size: 15px;
       }
+
+      .dropbtn {
+        background-color: none;
+        opacity: 100%;
+        color: White;
+        padding: 10px;
+        font-size: 16px;
+        border: none;
+      }
+
+      .dropdown {
+        position: relative;
+        display: inline-block;
+      }
+
+      .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f1f1f1;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 1;
+        min-width: 160px;
+        width: 100%;
+      }
+
+      .dropdown-content a {
+        color: black;
+        padding: 16px 16px;
+        text-decoration: none;
+        display: block;
+        width: 100%;
+      }
+
+      .dropdown-content a:hover {background-color: #ddd;}
+
+      .dropdown:hover .dropdown-content {
+        display: block;
+        text-align: left;
+        width: 100%;
+        margin-right: 0;
+        padding-right: 0;
+      }
+
+      .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+
     </style>
  </head>
  <body style="background: #F1EEEE;">
@@ -93,12 +139,14 @@
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
                       <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
-                        <li>
-                          <a href="gallery.html">Gallery</a>
-                        </li>
-                        <li>
-                          <a href="videos.html">Videos</a>
-                        </li>
+                      <div class="dropdown" id="Gallery">
+                      <li style="list-style: none;">
+                        <a href="#" style="padding: 10px;">GALLERY</a></li>
+                        <div class="dropdown-content">
+                        <a href="gallery.html">Photos</a>
+                        <a href="videos.html">Videos</a>
+                          </div>
+                        </div>
                         <li><a href="team.html">Team</a></li>
                         <li class="active"><a href="spk.html">Speakers</a></li>
                         <li><a href="sponsor.html">Sponsors</a></li>
