--- a/sponser.html
+++ b/sponser.html
@@ -40,8 +40,54 @@
     integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet" />
+  <style>
+  .dropbtn {
+    background-color: none;
+    opacity: 100%;
+    color: White;
+    padding: 10px;
+    font-size: 16px;
+    border: none;
+  }
 
-  <title>TEDxIITPatna | Sponsor</title>
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    min-width: 160px;
+    width: 100%;
+  }
+
+  .dropdown-content a {
+    color: black;
+    padding: 16px 16px;
+    text-decoration: none;
+    display: block;
+    width: 100%;
+  }
+
+  .dropdown-content a:hover {background-color: #ddd;}
+
+  .dropdown:hover .dropdown-content {
+    display: block;
+    text-align: left;
+    width: 100%;
+    margin-right: 0;
+    padding-right: 0;
+  }
+
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+  </style>
+  <title>TEDxIITPatnaLive | Sponsor</title>
+
 </head>
 
 <body style="background: #F1EEEE;">
@@ -78,10 +124,14 @@
                       <li><a href="index.html">Home</a></li>
                       <!-- <li class="has-children"> -->
                       <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
-                      <li><a href="gallery.html">Gallery</a></li>
-                      <li>
-                          <a href="videos.html">Videos</a>
-                      </li>
+                      <div class="dropdown" id="Gallery">
+                      <li style="list-style: none;">
+                        <a href="#" style="padding: 10px;">GALLERY</a></li>
+                        <div class="dropdown-content">
+                        <a href="gallery.html">Photos</a>
+                        <a href="videos.html">Videos</a>
+                          </div>
+                        </div>
                       <li><a href="team.html">Team</a></li>
                       <li ><a href="spk.html">Speakers</a></li>
                       <!-- <li><a href="index.html#sch">Schedule</a></li>
