--- a/team.html
+++ b/team.html
@@ -31,6 +31,52 @@
 
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/team.css">
+    <style>
+    .dropbtn {
+      background-color: none;
+      opacity: 100%;
+      color: White;
+      padding: 10px;
+      font-size: 16px;
+      border: none;
+    }
+
+    .dropdown {
+      position: relative;
+      display: inline-block;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #f1f1f1;
+      box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+      z-index: 1;
+      min-width: 160px;
+      width: 100%;
+    }
+
+    .dropdown-content a {
+      color: black;
+      padding: 16px 16px;
+      text-decoration: none;
+      display: block;
+      width: 100%;
+    }
+
+    .dropdown-content a:hover {background-color: #ddd;}
+
+    .dropdown:hover .dropdown-content {
+      display: block;
+      text-align: left;
+      width: 100%;
+      margin-right: 0;
+      padding-right: 0;
+    }
+
+    .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+    </style>
 
   </head>
   <body  style="background: #F1EEEE;">
@@ -71,18 +117,20 @@
                         <a href="#">About</a>
                        <ul class="dropdown arrow-top">
                           <li><a href="#abt">About</a></li>
-
                         </ul>
                       </li>-->
-                        <li><a href="gallery.html">Gallery</a></li>
-                        <li>
-                          <a href="videos.html">Videos</a>
-                        </li>
+                      <div class="dropdown" id="Gallery">
+                      <li style="list-style: none;">
+                        <a href="#" style="padding: 10px;">GALLERY</a></li>
+                        <div class="dropdown-content">
+                        <a href="gallery.html">Photos</a>
+                        <a href="videos.html">Videos</a>
+                          </div>
+                        </div>
                         <li class="active"><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
                         <li><a href="sponsor.html">Sponsors</a></li>
                         <!--  <li><a href="#sch">Schedule</a></li>
-
                       <li><a href="#spk">Speakers</a></li>-->
                       <li><a href="#foo">Contact</a></li>
                     </ul>
