--- a/gallery.html
+++ b/gallery.html
@@ -131,8 +131,8 @@
                         </div>
                         <li><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
-                        <li><a href="sponsor.html">Sponsors</a></li>
-                       <!--  <li class="has-children">
+                       <!--   <li><a href="sponsor.html">Sponsors</a></li>
+                       <li class="has-children">
                           <a href="#">Join US</a>
                           <ul class="dropdown arrow-top">
                             <li>
@@ -165,7 +165,7 @@
       <div class="container gallery-container">
         <div class="tz-gallery">
           <div class="heading-with-border text-center mb-5">
-            <h2 class="heading text-uppercase">Gallery</h2>
+            <h2 class="heading text-uppercase" style="padding-top: 10px;">Gallery</h2>
           </div>
 
 
