--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 
                         <li><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
-                        <li><a href="sponsor.html">Sponsors</a></li>
-                        <!--  <li><a href="#sch">Schedule</a></li>
+                      <!--   <li><a href="sponsor.html">Sponsors</a></li>
+                         <li><a href="#sch">Schedule</a></li>
 
                       <li><a href="#spk">Speakers</a></li>-->
                       <li><a href="#foo">Contact</a></li>
