--- a/spk.html
+++ b/spk.html
@@ -149,8 +149,8 @@
                         </div>
                         <li><a href="team.html">Team</a></li>
                         <li class="active"><a href="spk.html">Speakers</a></li>
-                        <li><a href="sponsor.html">Sponsors</a></li>
-                        <!-- <li><a href="index.html#sch">Schedule</a></li>
+                      <!--   <li><a href="sponsor.html">Sponsors</a></li>
+                        <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
                         <li><a href="#foo">Contact</a></li>
                       </ul>
