--- a/sponser.html
+++ b/sponser.html
@@ -133,9 +133,9 @@
                           </div>
                         </div>
                       <li><a href="team.html">Team</a></li>
-                      <li ><a href="spk.html">Speakers</a></li>
-                      <!-- <li><a href="index.html#sch">Schedule</a></li>
-						<li><a href="index.html#spk">Speakers</a></li> -->
+                     <!--  <li ><a href="spk.html">Speakers</a></li>
+                      <li><a href="index.html#sch">Schedule</a></li>
+			<li><a href="index.html#spk">Speakers</a></li> -->
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
