--- a/team.html
+++ b/team.html
@@ -129,8 +129,8 @@
                         </div>
                         <li class="active"><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
-                        <li><a href="sponsor.html">Sponsors</a></li>
-                        <!--  <li><a href="#sch">Schedule</a></li>
+                       <!--  <li><a href="sponsor.html">Sponsors</a></li>
+                         <li><a href="#sch">Schedule</a></li>
                       <li><a href="#spk">Speakers</a></li>-->
                       <li><a href="#foo">Contact</a></li>
                     </ul>
