--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>TEDxIITPatnaLive | Gallery</title>
+    <title>TEDxIITPatnaLive | Photos</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -165,7 +165,7 @@
       <div class="container gallery-container">
         <div class="tz-gallery">
           <div class="heading-with-border text-center mb-5">
-            <h2 class="heading text-uppercase" style="padding-top: 10px;">Gallery</h2>
+            <h2 class="heading text-uppercase" style="padding-top: 10px;">Photos from previous edition</h2>
           </div>
 
 
