--- a/team.html
+++ b/team.html
@@ -3,7 +3,7 @@
   <head>
     <title>TEDxIITPatnaLive | Team</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta property="og:title" content="TEDxIITPatna | Team">
     <meta property="og:image" content="https://www.tedxiitpatna.com/images/theme.jpg">
     <meta property="og:url" content="https://www.tedxiitpatna.com/team.html">
@@ -64,7 +64,9 @@
       width: 100%;
     }
 
-    .dropdown-content a:hover {background-color: #ddd;}
+    .dropdown-content a:hover {
+      color: black;
+      background-color: #ddd;}
 
     .dropdown:hover .dropdown-content {
       display: block;
@@ -129,7 +131,7 @@
                         </div>
                         <li class="active"><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
-                       <!--  <li><a href="sponsor.html">Sponsors</a></li>
+                       <!--   <li><a href="sponsor.html">Sponsors</a></li>
                          <li><a href="#sch">Schedule</a></li>
                       <li><a href="#spk">Speakers</a></li>-->
                       <li><a href="#foo">Contact</a></li>
