--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 .dropbtn {
   background-color: none;
   opacity: 100%;
-  color: White;
+  color: black;
   padding: 10px;
   font-size: 16px;
   border: none;
@@ -77,7 +77,10 @@
   width: 100%;
 }
 
-.dropdown-content a:hover {background-color: #ddd;}
+.dropdown-content a:hover {
+  color: black;
+  background-color: #ddd;
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
