--- a/spk.html
+++ b/spk.html
@@ -87,7 +87,9 @@
         width: 100%;
       }
 
-      .dropdown-content a:hover {background-color: #ddd;}
+      .dropdown-content a:hover {
+        color: black;
+        background-color: #ddd;}
 
       .dropdown:hover .dropdown-content {
         display: block;
@@ -149,7 +151,7 @@
                         </div>
                         <li><a href="team.html">Team</a></li>
                         <li class="active"><a href="spk.html">Speakers</a></li>
-                      <!--   <li><a href="sponsor.html">Sponsors</a></li>
+                     <!--     <li><a href="sponsor.html">Sponsors</a></li>
                         <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
                         <li><a href="#foo">Contact</a></li>
