--- a/videos.html
+++ b/videos.html
@@ -72,7 +72,9 @@
         width: 100%;
       }
 
-      .dropdown-content a:hover {background-color: #ddd;}
+      .dropdown-content a:hover {
+        color: black;
+        background-color: #ddd;}
 
       .dropdown:hover .dropdown-content {
         display: block;
@@ -125,7 +127,7 @@
                         <li><a href="index.html">Home</a></li>
                       <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                       <div class="dropdown" id="Gallery">
-                      <li style="list-style: none;">
+                      <li class="active" style="list-style: none;">
                         <a href="#" style="padding: 10px;">GALLERY</a></li>
                         <div class="dropdown-content">
                         <a href="gallery.html">Photos</a>
@@ -134,8 +136,8 @@
                         </div>
                         <li><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
-                        <!--  <li><a href="sponsor.html">Sponsors</a></li>
-                       <li><a href="index.html#sch">Schedule</a></li>
+                       <!--   <li><a href="sponsor.html">Sponsors</a></li>
+                         <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
                         <li><a href="#foo">Contact</a></li>
                       </ul>
