--- a/gallery.html
+++ b/gallery.html
@@ -168,7 +168,7 @@
       <div class="container gallery-container">
         <div class="tz-gallery">
           <div class="heading-with-border text-center mb-5">
-            <h2 class="heading text-uppercase" style="padding-top: 10px;" style="margin-bottom: 0;">Photos from previous edition</h2>
+            <h2 class="heading text-uppercase" style="padding-top: 10px;" style="margin-bottom: 0;">Photos from previous editions</h2>
           </div>
 
 
