--- a/sponser.html
+++ b/sponser.html
@@ -51,11 +51,13 @@
   }
 
   .dropdown {
+    color: #3c3636d1;
     position: relative;
     display: inline-block;
   }
 
   .dropdown-content {
+    color: #3c3636d1;
     display: none;
     position: absolute;
     background-color: #f1f1f1;
@@ -66,14 +68,16 @@
   }
 
   .dropdown-content a {
-    color: black;
+    color: #3c3636d1;
+    opacity: 100%;
     padding: 16px 16px;
     text-decoration: none;
     display: block;
     width: 100%;
   }
-
-  .dropdown-content a:hover {background-color: #ddd;}
+  .dropdown-content a:hover {
+    color: black;
+    background-color: #ddd;}
 
   .dropdown:hover .dropdown-content {
     display: block;
@@ -105,7 +109,7 @@
     <div class="site-navbar-wrap bg-white" id="sticky">
       <div class="container">
         <div class="site-navbar bg-light">
-          <div class="py-1">
+          <div class="py-1" style="background-color:white;">
             <div class="row align-items-center">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
@@ -126,16 +130,16 @@
                       <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                       <div class="dropdown" id="Gallery">
                       <li style="list-style: none;">
-                        <a href="#" style="padding: 10px;">GALLERY</a></li>
+                        <a id="kala" href="#" >Gallery</a></li>
                         <div class="dropdown-content">
                         <a href="gallery.html">Photos</a>
                         <a href="videos.html">Videos</a>
                           </div>
                         </div>
                       <li><a href="team.html">Team</a></li>
-                     <!--  <li ><a href="spk.html">Speakers</a></li>
-                      <li><a href="index.html#sch">Schedule</a></li>
-			<li><a href="index.html#spk">Speakers</a></li> -->
+                     <!--   <li ><a href="spk.html">Speakers</a></li>
+                       <li><a href="index.html#sch">Schedule</a></li>
+						<li><a href="index.html#spk">Speakers</a></li> -->
                       <li><a href="#">Contact</a></li>
                     </ul>
                   </div>
