--- a/sponsor.html
+++ b/sponsor.html
@@ -50,11 +50,13 @@
       }
 
       .dropdown {
+        color: #3c3636d1;
         position: relative;
         display: inline-block;
       }
 
       .dropdown-content {
+        color: #3c3636d1;
         display: none;
         position: absolute;
         background-color: #f1f1f1;
@@ -65,7 +67,8 @@
       }
 
       .dropdown-content a {
-        color: black;
+        color: #3c3636d1;
+        opacity: 100%;
         padding: 16px 16px;
         text-decoration: none;
         display: block;
@@ -104,7 +107,7 @@
       <div class="site-navbar-wrap bg-white" id="sticky">
         <div class="container">
           <div class="site-navbar bg-light">
-            <div class="py-1">
+            <div class="py-1" style="background-color:white;">
               <div class="row align-items-center">
                 <div class="col-2">
                   <h2 class="mb-0 site-logo">
@@ -128,7 +131,7 @@
                       <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                       <div class="dropdown" id="Gallery">
                       <li style="list-style: none;">
-                        <a href="#" style="padding: 10px;">GALLERY</a></li>
+                        <a id="kala" href="#" >Gallery</a></li>
                         <div class="dropdown-content">
                         <a href="gallery.html">Photos</a>
                         <a href="videos.html">Videos</a>
