--- a/team.html
+++ b/team.html
@@ -42,11 +42,13 @@
     }
 
     .dropdown {
+      color: #3c3636d1;
       position: relative;
       display: inline-block;
     }
 
     .dropdown-content {
+      color: #3c3636d1;
       display: none;
       position: absolute;
       background-color: #f1f1f1;
@@ -57,7 +59,8 @@
     }
 
     .dropdown-content a {
-      color: black;
+      color: #3c3636d1;
+      opacity: 100%;
       padding: 16px 16px;
       text-decoration: none;
       display: block;
@@ -97,7 +100,7 @@
     <div class="site-navbar-wrap bg-white">
       <div class="container">
         <div class="site-navbar bg-light">
-          <div class="py-1">
+          <div class="py-1" style="background-color:white;">
             <div class="row align-items-center">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
@@ -123,7 +126,7 @@
                       </li>-->
                       <div class="dropdown" id="Gallery">
                       <li style="list-style: none;">
-                        <a href="#" style="padding: 10px;">GALLERY</a></li>
+                        <a id="kala" href="#" >Gallery</a></li>
                         <div class="dropdown-content">
                         <a href="gallery.html">Photos</a>
                         <a href="videos.html">Videos</a>
