--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   background-color: #f1f1f1;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
-  min-width: 160px;
+  min-width: 80px;
   width: 100%;
 }
 
@@ -146,7 +146,7 @@
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li class="active"><a href="index.html">Home</a></li>
 
-                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
+                      <!--<li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
                       <!--  <li class="has-children">
                         <a href="#">About</a>
                        <ul class="dropdown arrow-top">
@@ -169,7 +169,7 @@
                          <li><a href="#sch">Schedule</a></li>
 
                       <li><a href="#spk">Speakers</a></li>-->
-                      <li><a href="#foo">Contact</a></li>
+                  <!--    <li><a href="#foo">Contact</a></li> -->
                     </ul>
                   </div>
                 </nav>
