--- a/gallery.html
+++ b/gallery.html
@@ -60,7 +60,7 @@
       background-color: #f1f1f1;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       z-index: 1;
-      min-width: 160px;
+      min-width: 80px;
       width: 100%;
     }
 
@@ -125,7 +125,7 @@
                       </div>
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
-                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
+                    <!--  <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
                       <div class="dropdown" id="Gallery">
                       <li class="active" style="list-style: none;">
                         <a id="kala" href="#">Gallery</a></li>
@@ -152,7 +152,7 @@
                         </li> -->
                         <!-- <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
-                        <li><a href="#foo">Contact</a></li>
+                      <!--  <li><a href="#foo">Contact</a></li> -->
                       </ul>
                     </div>
                   </nav>
@@ -176,32 +176,32 @@
 
 
           <div class="row" style="margin-bottom: 20px;">
-            <div class="col-sm-6 col-md-4">
+        <!--    <div class="col-sm-6 col-md-3">
               <a class="lightbox" href="images/gallery/g1.jpg">
                 <img src="images/gallery/g1.jpg" alt="Tunnel" />
               </a>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
               <a class="lightbox" href="images/gallery/g2.JPG">
                 <img src="images/gallery/g2.JPG" alt="Bridge" />
               </a>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
               <a class="lightbox" href="images/gallery/g3.JPG">
                 <img src="images/gallery/g3.JPG" alt="Park" />
               </a>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
               <a class="lightbox" href="images/gallery/g4.jpg">
                 <img src="images/gallery/g4.jpg" alt="Tunnel" />
               </a>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
               <a class="lightbox" href="images/gallery/g5.JPG">
                 <img src="images/gallery/g5.JPG" alt="Tunnel" />
               </a>
             </div>
-            <div class="col-sm-6 col-md-4">
+            <div class="col-sm-6 col-md-3">
               <a class="lightbox" href="images/gallery/g6.JPG">
                 <img src="images/gallery/g6.JPG" alt="Tunnel" />
               </a>
@@ -220,7 +220,7 @@
               <a class="lightbox" href="images/gallery/g9.JPG">
                 <img src="images/gallery/g9.JPG" alt="Tunnel" />
               </a>
-            </div>
+            </div>-->
             <div class="col-sm-6 col-md-4">
               <a class="lightbox" href="gallery-new/_DSC3698.JPG">
                 <img src="gallery-new/_DSC3698.JPG" alt="Tunnel" />
