--- a/sponsor.html
+++ b/sponsor.html
@@ -62,7 +62,7 @@
         background-color: #f1f1f1;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
         z-index: 1;
-        min-width: 160px;
+        min-width: 80px;
         width: 100%;
       }
 
@@ -128,7 +128,7 @@
                       </div>
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
-                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
+                    <!--  <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
                       <div class="dropdown" id="Gallery">
                       <li style="list-style: none;">
                         <a id="kala" href="#" >Gallery</a></li>
@@ -143,7 +143,7 @@
                         <!-- <li><a</li> -->
                         <!-- <li><a href="index.html#sch">Schedule</a></li>
                       <li><a href="index.html#spk">Speakers</a></li> -->
-                        <li><a href="#foo">Contact</a></li>
+                      <!--  <li><a href="#foo">Contact</a></li>-->
                       </ul>
                     </div>
                   </nav>
