--- a/team.html
+++ b/team.html
@@ -54,7 +54,7 @@
       background-color: #f1f1f1;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       z-index: 1;
-      min-width: 160px;
+      min-width: 80px;
       width: 100%;
     }
 
@@ -117,7 +117,7 @@
 
                     <ul class="site-menu js-clone-nav d-none d-lg-block">
                       <li><a href="index.html">Home</a></li>
-                      <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>
+                    <!--  <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
                       <!--  <li class="has-children">
                         <a href="#">About</a>
                        <ul class="dropdown arrow-top">
@@ -137,7 +137,7 @@
                        <!--   <li><a href="sponsor.html">Sponsors</a></li>
                          <li><a href="#sch">Schedule</a></li>
                       <li><a href="#spk">Speakers</a></li>-->
-                      <li><a href="#foo">Contact</a></li>
+                    <!--  <li><a href="#foo">Contact</a></li> -->
                     </ul>
                   </div>
                 </nav>
