--- a/index.html
+++ b/index.html
@@ -111,11 +111,13 @@
                           <a href="gallery.html">Photos</a>
                           <a href="videos.html">Videos</a>
                           </div>
-
                         </div>
-
+                        <div class="gora">
+                        <li><a href="gallery.html">Photos</a></li>
+                        <li><a href="videos.html">Videos</a></li>
+                        </div>
                         <li><a href="team.html">Team</a></li>
-                        <li ><a href="spk.html">Speakers</a></li>
+                        <li><a href="spk.html">Speakers</a></li>
                       <!--   <li><a href="sponsor.html">Sponsors</a></li>
                          <li><a href="#sch">Schedule</a></li>
 
