--- a/sponsor.html
+++ b/sponsor.html
@@ -129,14 +129,18 @@
                       <ul class="site-menu js-clone-nav d-none d-lg-block">
                         <li><a href="index.html">Home</a></li>
                     <!--  <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
-                      <div class="dropdown" id="Gallery">
-                      <li style="list-style: none;">
-                        <a id="kala" href="#" >Gallery</a></li>
-                        <div class="dropdown-content">
+                    <div class="dropdown" id="Gallery">
+                    <li style="list-style: none;">
+                      <a id="kala" class="galry" href="#">Gallery</a></li>
+                      <div class="dropdown-content">
                         <a href="gallery.html">Photos</a>
                         <a href="videos.html">Videos</a>
-                          </div>
                         </div>
+                      </div>
+                      <div class="gora">
+                      <li><a href="gallery.html">Photos</a></li>
+                      <li><a href="videos.html">Videos</a></li>
+                      </div>
                         <li><a href="team.html">Team</a></li>
                         <li ><a href="spk.html">Speakers</a></li>
                         <li class="active"><a href="sponsor.html">Sponsors</a></li>
