Add new coming soon pic.

--- a/spk.html
+++ b/spk.html
@@ -132,7 +132,7 @@
           </div>
           
           <div class="text-center">
-            <img src="images/coming soon.jpeg" width="600px" height="600px" style="border-radius: 10%;">
+            <img src="images/Monkey_coming_soon.png" width="600px" height="600px" style="border-radius: 10%;">
           </div>
           
 
