--- a/sponsor.html
+++ b/sponsor.html
@@ -111,7 +111,7 @@
               <div class="row align-items-center">
                 <div class="col-2">
                   <h2 class="mb-0 site-logo">
-                    <a href="index.html"><img src="Logos/White linear.png" style="width:290px; height:85px;"></a>
+                    <a href="index.html"><img class="logo" src="Logos/White linear.png"/></a>
                   </h2>
                 </div>
                 <div class="col-10">
