resolve index merge conflict

--- a/index.html
+++ b/index.html
@@ -78,10 +78,8 @@
     <div class="site-navbar-wrap bg-light" id="sticky">
       <div class="container ">
         <div class="site-navbar bg-light">
-
-          <div class="py-1">
-            <div class="row align-items-center ">
-
+          <div class="py-1" style="background-color:white;">
+            <div class="row align-items-center">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
                   <a href="index.html">
