--- a/team.html
+++ b/team.html
@@ -97,14 +97,14 @@
       <div class="site-mobile-menu-body"></div>
     </div> <!-- .site-mobile-menu -->
 
-    <div class="site-navbar-wrap bg-white">
+    <div class="site-navbar-wrap bg-white" style="height:73.33px">
       <div class="container">
         <div class="site-navbar bg-light">
-          <div class="py-1" style="background-color:white;">
+          <div class="py-1" style="background-color:white; height:73.33px">
             <div class="row align-items-center">
               <div class="col-2">
                 <h2 class="mb-0 site-logo">
-                  <a href="index.html"><img class="logo" src="Logos/White linear.png"/></a>
+                  <a href="index.html"><img class="logo" src="Logos/White linear.png"></a>
                 </h2>
               </div>
               <div class="col-10">
@@ -155,7 +155,7 @@
 
 
 
-     <section class="our-team-section">
+     <section class="our-team-section" style="top:70px">
         <div class="heading-with-border text-center mb-5">
           <h2 class="heading text-uppercase " style="font-size: 30px;">Team</h2>
         </div>
