--- a/gallery.html
+++ b/gallery.html
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-10">
                   <nav class="site-navigation text-right" role="navigation">
-                    <div class="container">
+                    <div class="container" style="padding-right:0;">
                       <div
                         class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"
                       >
