--- a/videos.html
+++ b/videos.html
@@ -104,7 +104,7 @@
        <!-- .site-mobile-menu -->
 
       <div class="site-navbar-wrap bg-white" id="sticky">
-        <div class="container">
+        <div class="container" style="padding-right:0;">
           <div class="site-navbar bg-light">
             <div class="py-1" style="background-color:white;">
               <div class="row align-items-center">
