made changes in headings

--- a/team.html
+++ b/team.html
@@ -299,7 +299,7 @@
 
                 </div>
                 <div class="text-uppercase text-center h5 mb-4" style="margin-top: 100px;">
-                    Core
+                    Planning and curation
                 </div>
                 <div class="row mb-5">
 
