made dummy speaker cards, fixed navbar

--- a/gallery.html
+++ b/gallery.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/gallery.css" />
-
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <style>
     .dropbtn {
       background-color: none;
@@ -113,7 +113,7 @@
                 </div>
                 <div class="col-10">
                   <nav class="site-navigation text-right" role="navigation">
-                    <div class="container" style="padding-right:0;">
+                    <div class="container" style="padding-right:6px;">
                       <div
                         class="d-inline-block d-lg-none ml-md-0 mr-auto py-3"
                       >
@@ -128,7 +128,7 @@
                     <!--  <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
                     <div class="dropdown" id="Gallery">
                     <li class="active" style="list-style: none;">
-                      <a id="kala" class="galry" href="#">Gallery</a></li>
+                      <a id="kala" class="galry" href="#">Gallery&nbsp<i class="fas fa-chevron-down"></i></a></li>
                       <div class="dropdown-content">
                         <a href="gallery.html">Photos</a>
                         <a href="videos.html">Videos</a>
@@ -174,7 +174,7 @@
       <div class="container gallery-container">
         <div class="tz-gallery">
           <div class="heading-with-border text-center mb-5">
-            <h2 class="heading text-uppercase" style="padding-top: 10px;" style="margin-bottom: 0;">Photos from previous edition</h2>
+            <h2 class="heading text-uppercase" style="padding-top: 10px;" style="margin-bottom: 0;"><strong> Photos from previous edition</strong></h2>
           </div>
 
 
