--- a/videos.html
+++ b/videos.html
@@ -35,6 +35,7 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css" />
     <link rel="stylesheet" href="css/aos.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
     <style type="text/css">
       .full-screen {
         height: 90vh;
@@ -130,7 +131,7 @@
                   <!--    <li style=""><a href="https://www.tedxiitpatna.com/register/form.html"><span style="color: #FFf; background:#ff0000; height: 50px; padding: 10px">Register</span></a></li>-->
                   <div class="dropdown" id="Gallery">
                   <li class="active" style="list-style: none;">
-                    <a id="kala" class="galry" href="#">Gallery</a></li>
+                    <a id="kala" class="galry" href="#">Gallery&nbsp<i class="fas fa-chevron-down"></i></a></li>
                     <div class="dropdown-content">
                       <a href="gallery.html">Photos</a>
                       <a href="videos.html">Videos</a>
@@ -168,7 +169,7 @@
         <div class="container">
 
           <div class="heading-with-border text-center mb-5">
-            <h2 class="heading text-uppercase">Videos from previous editions</h2>
+            <h2 class="heading text-uppercase"><strong>Videos from previous editions</strong></h2>
           </div>
 
           <div class="row">
