Add responsive images

--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
       <div class="product-img">
         
         <img  class="mer1img"
-        src="images/bkmerch1.jpg" >
+        src="images/920x400.png" >
         <p class="mer2img" style="text-align: center"><img src="images/bkmerch1.jpg" ></p>
        
       </div>
