Fix bugs in responsive design.

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- .site-mobile-menu -->
 
      <div class="site-navbar-wrap bg-white" id="sticky">
-       <div class="container" style="padding-right:0;">
+       <div class="container" style="padding-right:0px; ">
          <div class="site-navbar bg-light">
            <div class="py-1" style="background-color:white;">
              <div class="row align-items-center">
@@ -129,6 +129,7 @@
              </div>
            </div>
          </div>
+         
        </div>
 
      </div>     
